Make app responsive to device orientation change

--- a/app.json
+++ b/app.json
@@ -1,9 +1,9 @@
 {
   "expo": {
-    "name": "garden-mobile",
+    "name": "Garden Planner",
     "slug": "garden-mobile",
-    "version": "1.0.0",
-    "orientation": "portrait",
+    "version": "1.0",
+    "orientation": "default",
     "icon": "./assets/icon.png",
     "splash": {
       "image": "./assets/splash.png",
