--- a/app.json
+++ b/app.json
@@ -18,11 +18,12 @@
     ],
     "androidStatusBar": {
       "barStyle": "light-content",
-      "backgroundColor": "#00000088"
+      "backgroundColor": "#004B14",
+      "translucent": false
     },
     "androidNavigationBar": {
       "barStyle": "light-content",
-      "backgroundColor": "#000000"
+      "backgroundColor": "#004B14"
     },
     "ios": {
       "supportsTablet": true
