--- a/app.json
+++ b/app.json
@@ -2,12 +2,12 @@
   "expo": {
     "name": "Garden Planner",
     "slug": "garden-mobile",
-    "version": "1.0",
+    "version": "1.1",
     "orientation": "default",
     "icon": "./assets/icon.png",
     "splash": {
       "image": "./assets/splash.png",
-      "resizeMode": "contain",
+      "resizeMode": "cover",
       "backgroundColor": "#ffffff"
     },
     "updates": {
@@ -32,7 +32,8 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#004B14"
-      }
+      },
+      "package": "com.slightlyimpressive.gardenplanner"
     },
     "web": {
       "favicon": "./assets/favicon.png"
