--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-uuid": "^2.0.1",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "expo-ads-admob": "~10.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
