Add versionCode to app.json

--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "Garden Planner",
     "slug": "garden-mobile",
-    "version": "1.6",
+    "version": "1.7",
     "orientation": "default",
     "icon": "./assets/icon.png",
     "splash": {
@@ -37,7 +37,8 @@
       "config": {
         "googleMobileAdsAppId": "ca-app-pub-5662395825140930~5897918301"
       },
-      "permissions": []
+      "permissions": [],
+      "versionCode": 2
     },
     "web": {
       "favicon": "./assets/favicon.png"
