--- a/package.json
+++ b/package.json
@@ -1,31 +1,34 @@
 {
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "eject": "expo eject"
   },
   "dependencies": {
     "@expo-google-fonts/solway": "^0.2.0",
-    "@react-native-picker/picker": "1.16.1",
-    "expo": "~42.0.1",
-    "expo-app-loading": "^1.1.2",
-    "expo-font": "~9.2.1",
-    "expo-status-bar": "~1.0.4",
+    "@react-native-picker/picker": "2.4.8",
+    "expo": "^47.0.0",
+    "expo-app-loading": "~2.1.1",
+    "expo-font": "~11.0.1",
+    "expo-splash-screen": "~0.17.5",
+    "expo-status-bar": "~1.4.2",
+    "expo-web-browser": "~12.0.0",
     "firebase": "8.2.3",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
-    "react-native-gesture-handler": "~1.10.2",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
+    "react-native": "0.70.5",
+    "react-native-gesture-handler": "~2.8.0",
+    "react-native-google-mobile-ads": "^8.2.2",
     "react-native-uuid": "^2.0.1",
-    "react-native-web": "~0.13.12",
-    "expo-ads-admob": "~10.1.2",
-    "expo-web-browser": "~9.2.0"
+    "react-native-web": "~0.18.7",
+    "expo-dev-client": "~2.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0"
+    "@babel/core": "^7.19.3"
   },
-  "private": true
+  "private": true,
+  "name": "garden-mobile",
+  "version": "1.0.0"
 }
